added toast & draggable editor

--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "flowbite": "^1.6.5",
     "flowbite-svelte": "^0.34.9",
     "highlight.js": "^11.8.0",
-    "quill": "latest"
+    "svelte-french-toast": "^1.0.4-beta.0"
   }
 }
