--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "flowbite": "^1.6.5",
     "flowbite-svelte": "^0.34.9",
     "highlight.js": "^11.8.0",
+    "moment": "^2.29.4",
     "svelte-chartjs": "^3.1.2",
-    "svelte-french-toast": "^1.0.4-beta.0"
+    "svelte-french-toast": "^1.0.4-beta.0",
+    "svelte-heatmap": "^1.0.2"
   }
 }
