--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "module",
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "@supabase/supabase-js": "^2.26.0",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "firebase": "^9.20.0",
